Find add ons path

--- a/config/odoo/odoo-server.conf
+++ b/config/odoo/odoo-server.conf
@@ -1,5 +1,5 @@
 [options]
-addons_path = /opt/odoo/extra
+addons_path = /opt/odoo/extra, /opt/odoo/addons
 data_dir = /var/lib/odoo
 auto_reload = True
 admin_passwd = admin
